# kmeans-coreset

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: CMakeLists.txt  CheckCXXCompilerFlag.cmake  Coreset.cpp  Coreset.h  Partition.cpp  Partition.h  Point.cpp  Point.h  main.cpp
tools/share/cmake/: FindLog4Cxx.cmake  FindUnitTestPlusPlus.cmake
